--- a/assets/stylesheets/custom.scss
+++ b/assets/stylesheets/custom.scss
@@ -1,8 +1,8 @@
-/* Style Sheet for richardekwonye.com
+/* Style Sheet for chilakamichael.com
  * Written in sass
- * author: Richard Ekwonye
- * email:ekwonyenoob@gmail.com
- * website: http://richardekwonye.com */
+ * author: Chilaka Michael
+ * email:chilakamichael001@gmail.com
+ * website: http://chilakamichael.com */
 
  @import "config/colors";
 
