Final changes except for future purposes

--- a/assets/stylesheets/custom.css
+++ b/assets/stylesheets/custom.css
@@ -49,9 +49,9 @@ g, path {
   pointer-events: all; }
 
 .ylw {
-  color: #f4ee6f; }
+  color: #d0d4d4; }
   .ylw hr {
-    background: #f4ee6f !important; }
+    background: #d0d4d4 !important; }
 
 .center {
   text-align: center; }
@@ -69,7 +69,7 @@ g, path {
     margin: 15px -7px 15px -22px; }
   .menu li {
     display: block;
-    color: #f4ee6f;
+    color: #d0d4d4;
     padding: 4px 0px; }
     .menu li span {
       margin: -8px;
@@ -80,7 +80,7 @@ g, path {
       font-family: Fabrikat-regular; }
   .menu a, .menu a:link, .menu a:hover, .menu a:active, .menu a:visited {
     text-decoration: none;
-    color: #f4ee6f;
+    color: #d0d4d4;
     padding: 4px;
     margin: 0 15px;
     font-size: 1.55em;
@@ -218,14 +218,6 @@ g, path {
       background: url(../images/judic.png) no-repeat;
       background-size: cover;
       background-blend-mode: luminosity; }
-    body .judic1 {
-      background: url(../images/judic1.png) no-repeat;
-      background-size: cover;
-      background-blend-mode: luminosity; }
-    body .judic2 {
-      background: url(../images/judic2.png) no-repeat;
-      background-size: cover;
-      background-blend-mode: luminosity; }
     body .flex-direction-nav {
       display: none; }
     body .p-left {
@@ -237,10 +229,10 @@ g, path {
       font-size: 2.6em;
       z-index: 100;
       background: rgba(48, 51, 55, 0.42);
-      color: #f4ee6f;
+      color: #d0d4d4;
       height: 20vh; }
     body .view-proj {
-      color: #f4ee6f; }
+      color: #d0d4d4; }
     body .p-right {
       margin-left: 0;
       width: 100vw; }
@@ -264,9 +256,9 @@ g, path {
     body .port-top {
       left: 0; }
       body .port-top hr {
-        background: #f4ee6f; }
+        background: #d0d4d4; }
     body .portfolio .title {
-      color: #f4ee6f; }
+      color: #d0d4d4; }
     body .portfolio svg {
       width: 1.3em !important;
       margin: -2px 5px !important; } }
@@ -559,7 +551,7 @@ g, path {
 .flow-box, .contact-box {
   background: url(../images/flow.png) repeat !important;
   padding: 30px 40px 10px 40px !important;
-  background-color: #f4ee6f !important;
+  background-color: #d0d4d4 !important;
   text-align: center; }
 
 .flow {
